# Smarthome_IoT

./: .classpath  .gitignore  CMakeLists.txt  README.md  build.sh  compose.yaml
AI/voice/: eeum_device_control_ko_v1.yml  eeum_device_control_ko_v2.yml  eeum_device_control_ko_v3.yml  eeum_device_control_ko_v4.yml
IR/: .gitignore  CMakeLists.txt  CMakeLists_ESP32.txt  CMakeLists_ESP32_main.txt  ESP32_QUICK_START.md  README.md  README_ESP32.md  generate_qr.py  idf.py  mqtt_test.py  platformio.ini  requirements.txt  sdkconfig  test_error_messages.py  test_raw_data.py  test_simulation.cpp
IR/components/irremote/: CMakeLists.txt  idf_component.yml
IR/config/: app_config.json  appliances.json  device_groups.json  env_setup.md  esp32_config.json  ir_codes.json  scenarios.json  security_config.json
IR/config/systemd/: irremote.service
IR/config/windows/: irremote_service.ps1
IR/docs/: SECURITY.md
IR/header/core/: config.h  esp32_ir_system.h  ir_code_store.h  ir_system.h  platform.h  remote.h  security.h
IR/header/hardware/: appliance_controller.h  esp32_ir_receiver.h  esp32_ir_store.h  esp32_ir_transmitter.h  generic_device.h  ir_database.h  ir_learner.h  ir_protocol_detector.h  ir_receiver.h  irsend.h  pir_sensor.h
IR/header/network/: esp32_wifi_mqtt.h  matter_client.h  mqtt_client.h  mqtt_message.h  serial_controller.h
IR/include/core/: remote.h
IR/include/hardware/: irsend.h
IR/main/: CMakeLists.txt  main.cpp
IR/scripts/: build_esp32.ps1  build_esp32.sh  create_vs_project_manual.md  esp32_controller.py  generate_vs_solution.bat  generate_vs_solution.ps1  install_dependencies.sh  integration_test.py  run_esp32_controller.bat  run_tests.bat  run_tests.sh  setup_visual_studio.bat  setup_visual_studio.ps1  test_control_signals.sh  test_esp32.ps1  test_esp32_connection.py
IR/src/: appliance_controller.cpp  config.cpp  esp32_ir_receiver.cpp  esp32_ir_store.cpp  esp32_wifi_mqtt.cpp  generic_device.cpp  ir_learner.cpp  ir_receiver.cpp  irsend.cpp  main.cpp  matter_client.cpp  mqtt_client.cpp  mqtt_message.cpp  pir_sensor.cpp  remote.cpp  security.cpp  serial_controller.cpp
IR/tests/: CMakeLists.txt  test_simulation.cpp
IR/tests/integration/: test_hardware_simulation.cpp
IR/tests/unit/: test_ir_receiver.cpp  test_mqtt_client.cpp
IR/tests_backup/: CMakeLists.txt
IR/tests_backup/integration/: test_system_integration.cpp
Iot/IoTHub_ws/: CMakeLists.txt
Iot/IoTHub_ws/header/interface/: gpioPigpio.hpp  iGpio.hpp
Iot/IoTHub_ws/header/sensor/: Dht11Sensor.hpp  iSensor.hpp  sensorManager.hpp
Iot/IoTHub_ws/header/util/: tsQueue.hpp
Iot/IoTHub_ws/src/interface/: gpioPigpio.cpp
Iot/IoTHub_ws/src/mqtt/: test_sub.cpp
Iot/docs/: Develop_Environment_Specification.md  Iot_API_Specification.md  Iot_Directory_Hierarchy.md
Iot/iot_hub/: CMakeLists.txt
Iot/iot_hub/header/app/: HubApp.hpp  IrHandler.hpp  MqttHelper.hpp  SensorWorker.hpp
Iot/iot_hub/header/interface/: gpioPigpio.hpp  iGpio.hpp
Iot/iot_hub/header/mqtt/: mqttPublisher.hpp  mqttSubscriber.hpp
Iot/iot_hub/header/sensor/: sensorManager.hpp
Iot/iot_hub/header/sensor/interface/: iGpio.hpp  iSensor.hpp
Iot/iot_hub/header/sensors/: Dht11Sensor.hpp  IrReceiverSensor.hpp  iSensor.hpp  sensorManager.hpp
Iot/iot_hub/header/util/: mqttUtil.hpp  sensorTypes.hpp  tsQueue.hpp
Iot/iot_hub/src/app/: HubApp.cpp  IrHandler.cpp  MqttHelper.cpp  SensorWorker.cpp  main.cpp
Iot/iot_hub/src/interface/: gpioPigpio.cpp
Iot/iot_hub/src/mqtt/: mqttPublisher.cpp  mqttSubscriber.cpp  pub_main.cpp  sub_main.cpp  test_pub.cpp
Iot/iot_hub/src/sensor/: sensorManager.cpp
Iot/iot_hub/src/sensors/: CDht11.cpp  Dht11Sensor.cpp  IrReceiverSensor.cpp  lab04.cpp  sensorManager.cpp  test_sensors.cpp
Iot/iot_hub_mvp/: CMakeLists.txt  CmakeLists.txt
Iot/iot_hub_mvp/include/: analyzer.hpp  config.hpp  csv_interface.hpp  csv_mapper.hpp  csv_reader.hpp  csv_writer.hpp  dht11_reader.hpp  env_manager.hpp  ir_device_manager.hpp  ir_receiver.hpp  log_manager.hpp  mqtt_client.hpp  mqtt_manager.hpp  types.hpp  util.hpp
Iot/iot_hub_mvp/include/actuator/: dht11_reader.hpp  ir_receiver.hpp
Iot/iot_hub_mvp/include/app/: dispatcher.hpp
Iot/iot_hub_mvp/include/csv/: csv_interface.hpp  csv_manager.hpp  csv_mapper.hpp  csv_mapper_func.hpp  csv_reader.hpp  csv_writer.hpp
Iot/iot_hub_mvp/include/manager/: actuator_manager.hpp  csv_manager.hpp  data_manager.hpp  main_manager.hpp  mqtt_manager.hpp  port.hpp  service.hpp
Iot/iot_hub_mvp/include/mqtt/: mqtt_client.hpp  mqtt_handler.hpp  mqtt_manager.hpp
Iot/iot_hub_mvp/src/: .mqtt_sub_test.cpp.swp  analyzer.cpp  csv_reader.cpp  csv_writer.cpp  dht11_reader.cpp  dht11_test.cpp  env_manager.cpp  ir_device_manager.cpp  ir_receiver.cpp  ir_test.cpp  log_manager.cpp  main.cpp  mqtt_client.cpp  mqtt_manager.cpp  mqtt_sub_test.cpp  mqtt_test.cpp  util.cpp
Iot/iot_hub_mvp/src/actuator/: dht11_reader.cpp  ir_receiver.cpp
Iot/iot_hub_mvp/src/csv/: csv_reader.cpp  csv_writer.cpp
Iot/iot_hub_mvp/src/manager/: actuator_manager.cpp  csv_manager.cpp  data_manager.cpp  main_manager.cpp  mqtt_manager.cpp
Iot/iot_hub_mvp/src/mqtt/: mqtt_client.cpp  mqtt_handler.cpp  mqtt_manager.cpp
Iot/iot_hub_mvp/src/test/: dht11_test.cpp  ir_test.cpp  mqtt_pub_test.cpp
Iot/rpi_comfort_agent/: CMakeLists.txt
Iot/rpi_comfort_agent/include/: csv_reader.hpp  metrics.hpp  optimizer.hpp  params.hpp  timeutil.hpp  types.hpp
Iot/rpi_comfort_agent/src/: csv_reader.cpp  main.cpp  metrics.cpp  optimizer.cpp  timeutil.cpp
MFC/EeumMFC/: EeumMFC.sln  broker_selfsigned_ca.crt  (+1 more)
Test/: dht11_test  dht11_test.cpp  dht11_test.py  ir_test.py  probe_edge.py
backend/: .gitignore  Dockerfile  HELP.md  build.gradle
config/: app_config.json  control_mappings.json
docs/: API.md
exec/: 1. Gitlab 소스 클론 이후 빌드 및 배포할 수 있도록 정리한 문서.txt  2. 외부 서비스.txt  3. DB 덤프 파일 최신본.txt  4. 시연 시나리오.txt
frontend/: .gitignore  build.gradle.kts  settings.gradle.kts
include/: config.h  mqtt_client.h  remote.h
infra/: nginx.conf
scripts/: install_dependencies.sh
src/: config.cpp  main.cpp  mqtt_client.cpp  remote.cpp
(+494 files in other folders)
