# ESP32 IR Remote 컴포넌트 CMakeLists.txt
idf_component_register(
    SRCS 
        "src/config.cpp"
        "src/mqtt_client.cpp"
        "src/mqtt_message.cpp"
        "src/matter_client.cpp"
        "src/ir_receiver.cpp"
        "src/appliance_controller.cpp"
        "src/pir_sensor.cpp"
        "src/remote.cpp"
    INCLUDE_DIRS 
        "header"
        "external"
    REQUIRES 
        driver
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        json
        fatfs
        spiffs
        esp_timer
        freertos
)
