# ESP32 IR Remote 컴포넌트 CMakeLists.txt
idf_component_register(
    SRCS 
        "src/config.cpp"
        "src/irsend.cpp"
        "src/mqtt_client.cpp"
        "src/serial_controller.cpp"
    INCLUDE_DIRS 
        "header"
    REQUIRES 
        driver
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        json
        esp_timer
        freertos
        mqtt
)
